--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -1,73 +1,84 @@
-/* Stil för länkar i projekten */
-.link {
-  text-decoration: none; 
-  color: inherit;
-  transition: color 0.3s ease, transform 0.3s ease; 
+.graphic-design-container {
+  text-align: center;
+  padding: 40px;
 }
 
-.link:hover {
-  color: #db9289; 
-  transform: scale(1.05);
-}
-
-/* Stil för projektkort */
-.projects-container {
-  display: flex;
-  flex-wrap: wrap; 
-  justify-content: space-between;
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); 
   gap: 20px; 
+  max-width: 1200px; 
+  margin: 0 auto; 
 }
 
 .project-card {
-  flex: 1 1 calc(30% - 20px);
-  max-width: calc(30% - 20px);
-  margin: 10px 0; 
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
   border-radius: 10px;
-  overflow: hidden;
+  padding: 20px;
+  text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
 }
 
 .project-card:hover {
-  transform: scale(1.05); 
+  transform: translateY(-5px);
 }
 
 .project-image {
   width: 100%;
-  height: 200px;
+  height: auto;
+  max-height: 300px;
   object-fit: cover;
-  border-radius: 10px 10px 0 0; 
+  border-radius: 5px;
 }
 
 .project-info {
-  padding: 15px; 
-  background-color: #fff;
-  text-align: center;
-  border-radius: 0 0 10px 10px; 
+  margin-top: 10px;
 }
 
 .project-info h3 {
-  font-size: 22px;
-  color: #333;
-  margin: 0;
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 
-.project-card:hover .project-info h3 {
-  color: #db9289; 
+.project-info p {
+  color: #555;
 }
 
-/* Media query för mindre skärmar (två rutor per rad) */
-@media (max-width: 1024px) {
-  .project-card {
-    flex: 1 1 calc(45% - 20px); 
-    max-width: calc(45% - 20px);
-  }
+/* Stil för knappen "Visa Större" */
+.view-button {
+  background-color: #db9289;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+  font-weight: bold;
+  margin-top: 10px;
 }
 
-/* Media query för mycket små skärmar (en ruta per rad) */
+.view-button:hover {
+  transform: translateY(-5px); 
+  background-color: #b67064; 
+}
+
+/* Responsiv design för mindre skärmar */
 @media (max-width: 768px) {
-  .project-card {
-    flex: 1 1 100%;
-    max-width: 100%;
+  .projects-grid {
+    grid-template-columns: 1fr; 
   }
+}
+
+.contact-link {
+  color: #db9289;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+.contact-link:hover {
+  color: #b67064;
 }
