--- a/src/Components/Textproduktion.css
+++ b/src/Components/Textproduktion.css
@@ -61,7 +61,7 @@
 }
 
 .view-button:hover {
-  transform: translateY(-5px); /* Liten lyfteffekt vid hover */
+  transform: translateY(-5px);
   background-color: #b67064;
 }
 
@@ -72,7 +72,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8); /* Mörkare bakgrund för modal */
+  background-color: rgba(0, 0, 0, 0.8); 
   display: flex;
   justify-content: center;
   align-items: center;
